// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Announcement /> Matches Snapshot 1`] = `
<Announcement>
  <ReactCSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={300}
    transitionName="announcement"
  >
    <ReactTransitionGroup
      childFactory={[Function]}
      component="span"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={300}
      transitionName="announcement"
    >
      <span />
    </ReactTransitionGroup>
  </ReactCSSTransitionGroup>
</Announcement>
`;

exports[`<Announcement /> Matches Snapshot 2`] = `
<Announcement>
  <ReactCSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={300}
    transitionName="announcement"
  >
    <ReactTransitionGroup
      childFactory={[Function]}
      component="span"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={300}
      transitionName="announcement"
    >
      <span>
        <ReactCSSTransitionGroupChild
          appear={false}
          enter={true}
          enterTimeout={500}
          leave={true}
          leaveTimeout={300}
          name="announcement"
        >
          <div
            className="announcement"
          >
            <div
              className="message large "
            >
              Hello World
            </div>
          </div>
        </ReactCSSTransitionGroupChild>
      </span>
    </ReactTransitionGroup>
  </ReactCSSTransitionGroup>
</Announcement>
`;
